# guc

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-usd.yml  build-usd22.11.yml  build-usd23.08.yml  build-usd24.03.yml  build.yml  deploy-release-manual.yml  deploy-release-weekly.yml  deploy-release.yml  run-tests-manual.yml  run-tests-usd2311.yml  run-tests-usd24.03.yml  run-tests-usd2403.yml  run-tests-usd2405.yml  run-tests-usd2408.yml  run-tests-usd2411.yml  run-tests-usd2502.yml  run-tests-usd2505.yml  run-tests-usd2508.yml  run-tests-usd2511.yml  run-tests.yml
cmake/: Finddraco.cmake  UsdDefaults.cmake  gucConfig.cmake.in
data/: GS.mtlx  GS_mat.mtlx
docs/: Comparison_FileFormat_Plugins.md  Conversion_Process.md  Ecosystem_Limitations.md  GaussianSplats.md  Gaussian_Splats.md  Sdf_Plugin.md  Structure_Mapping.md  Technology_Limitations.md
src/: CMakeLists.txt
src/guc/: CMakeLists.txt  license.h.in  main.c
src/libguc/: CMakeLists.txt  plugInfo.json.in
src/libguc/include/: guc.h  guc_params.h
src/libguc/src/: cgltf_util.cpp  cgltf_util.h  converter.cpp  converter.h  debugCodes.cpp  debugCodes.h  fileFormat.cpp  fileFormat.h  file_format.cpp  guc.cpp  image.cpp  image.h  materialx.cpp  materialx.h  mesh.cpp  mesh.h  naming.cpp  naming.h  usdpreviewsurface.cpp  usdpreviewsurface.h
